--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,5 @@ before_script:
   - npm install -g npm@latest
 script:
   - npm ci
-  - npx expo login --non-interactive -u 
+  - npx expo login -u $EXPO_USERNAME -p $EXPO_PASSWORD
   - npx expo publish --non-interactive
