--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ cache:
 before_script:
   - cd expoTest
   - npm install -g npm@latest
+  - npm install -g expo-cli@latest
 script:
   - npm ci
   - npx expo login -u $EXPO_USERNAME -p $EXPO_PASSWORD
