--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,6 @@ before_script:
   - npm install -g npm@latest
   - npm install -g expo-cli@latest
 script:
-  - npm ci
+  - npm install 
   - npx expo login -u $EXPO_USERNAME -p $EXPO_PASSWORD
   - npx expo publish --non-interactive
